Update GC学习.md